--- a/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
+++ b/ClientWeb/ClientWeb/Views/Film/ListeFilm.cshtml
@@ -83,7 +83,7 @@
             }
         </table>
     }
-    else
+    else if(!Model.PremiereFois)
     {
         <br />
         <div class="col-lg-12">
