add analysis page and query

--- a/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
+++ b/ClientWeb/ClientWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Recherche de film", "ListeFilm", "Film")</li>
+                    <li>@Html.ActionLink("Analyse", "Analyse", "Film")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
